[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rs-distances"
description = "A Python module implemented in Rust for efficient calculations"
authors = [{name = "Flynn OConnell", email = "flynnoconnell@gmail.com"}]
readme = "README.md"
homepage = "https://github.com/NeuroPyPy/rs-distances"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[package]
version = "0.8.0"
edition = "2023"

[package.metadata.maturin]
rust-version = "1.56.0"
requires-dist = ["numpy"]

[package.metadata.maturin.dependencies]
ndarray = "0.15.4"
numpy = "0.14.1"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
